# C-image-rotation

solution/: CMakeLists.txt
solution/include/: bmp.h  image.h  io.h  transform.h
solution/src/: bmp.c  image.c  io.c  main.c  transform.c
tester/: report.xml
